[gd_scene load_steps=4 format=2]

[ext_resource path="res://SCRIPTS/watch_out.gd" type="Script" id=1]
[ext_resource path="res://LETTERS/bubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://LETTERS/watchout_hud.tscn" type="PackedScene" id=3]

[node name="watch_out" type="Node"]
script = ExtResource( 1 )

[node name="bubble" parent="." groups=[
"persistent",
] instance=ExtResource( 2 )]

[node name="right_container" type="Node" parent="."]

[node name="spawn_time" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="left_container" type="Node" parent="."]

[node name="watchout_hud" parent="." instance=ExtResource( 3 )]
editor/display_folded = true

[connection signal="timeout" from="spawn_time" to="." method="_on_spawn_time_timeout"]

[editable path="watchout_hud"]
